Widen the sidebar (fix text overflow)

--- a/doc/docusaurus/src/css/custom.css
+++ b/doc/docusaurus/src/css/custom.css
@@ -14,6 +14,7 @@
   --ifm-color-primary-lighter: rgb(232,81,21);
   --ifm-color-primary-lightest: rgb(240,90,30);
   --ifm-code-font-size: 95%;
+  --doc-sidebar-width: 350px !important;
 }
 
 .docusaurus-highlight-code-line {
